kubernetes/overlays/apps/infra/applications/coder-workspaces/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder-workspaces
  labels:
    app: coder-workspaces
